@@ -1,3 +1,10 @@
+2005-06-26  Benoît Dejean  <TazForEver@dlfp.org>
+
+	* src/procman.c: (get_startup_timestamp), (cb_server), (main):
+	Fixed startup notification. Closes #172407.
+	
+	Patch by Davyd Madeley and Paollo Borelli.
+
 2005-06-24  Benoît Dejean  <TazForEver@dlfp.org>
 
 	* src/procactions.c: (renice_single_process),
